minor alignment issue fix

--- a/src/components/AdDetails.css
+++ b/src/components/AdDetails.css
@@ -139,7 +139,7 @@
     }
     .adDetailsBodyContentLeftImageContainer {
         height: auto;
-        width: 100vw;
+        width: 100%;
     }
     .adDetailsBodyContentLeftImageContainer > img {
         height: 100%;
